fix header z-index

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    z-index: 1029 !important;
+    z-index: 1030 !important;
 }
 
 #navbar {
